app/assets/stylesheets/custom.scss
/* ... */
// SIGN-IN PAGE -------------------------------------------//
.signin-container, .signup-container {
  width: 60%;
  height: 50%;
  position: relative;
  top: 45%;
  transform: translateY(-45%);
  margin: 0 auto;
  background-color: #F1E1E7;
  border-radius: 15px;
  -webkit-box-shadow: 0px 2px 21px -4px rgba(60,56,58,1);
  -moz-box-shadow: 0px 2px 21px -4px rgba(60,56,58,1);
  box-shadow: 0px 2px 21px -4px rgba(60,56,58,1);
  font-family: 'Manrope', sans-serif;
  border: 3px solid #ffa41b;
}

// SIGN-IN PAGE ---------------------------------------------//
.signin-form{
  width: 100%;
  height: auto;
  overflow: hidden;
  text-align: center;
  h2 {
    font: 400 40px/40px 'Baloo Bhaina 2';
    margin-top: 50px;
    margin-bottom: 35px;
    text-align: center;
  }
  input, textarea, select {
    border: 1px solid #dcdcdc;
    width: 60%;
    height: 35px;
    margin-bottom: 15px;
    border-radius: 5px;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
  }
  form {
    text-align: center;
    textarea, input {
      outline: none;
      border: none;
      background-color: transparent;
      border-radius: 0;
      &:focus {
        border: none;
        outline: none;
      }
    }
    .form-control {
      box-shadow: none !important;
      border-bottom: 2px dotted #EA9FB5;
      font: 300 20px/20px 'Manrope';
      &:focus {
        border-bottom: 2px dotted #CE2052;
      }
      margin-bottom: 20px;
    }
  }
  p {
    font: 400 18px/18px 'Manrope';
    transition-duration: 0.2s;
    margin-top: 15px;
    a {
      color: #900C3F;
      &:hover {
        color: #ffa41b;
        transition-duration: 0.15s;
      }
    }
  }
  .signin-btn {
    height: 50px;
    background-color: #7E0B37;
    color: #fafbfd;
    font: 500 22px/22px 'Baloo Bhaina 2';
    padding: 14px 16px;
    transition-duration: 0.2s;
    margin-bottom: 15px;
    border-radius: 4px;
    &:hover {
      background-color: #C70039;
      color: #ffa41b;
      transform: scale(1.02);
      transition-duration: 0.15s;
    }
  }
}

// JOIN PAGE ------------------------------------//
.signup-container {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  align-items: start;
  height: 90%;
  width: 90%;
  overflow: hidden;
  overflow-y: scroll;
  background-color: #fafbfd;
}

.signup-graphic {
  width: 45%;
  height: 100%;
  text-align: center;
  background-image: image-url('iso-party');
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: center;
}

.signup-form {
  width: 55%;
  padding: 25px 10px 25px 25px;
  text-align: left;
  h1 {
    font: 300 50px/50px 'Baloo Bhaina 2';
    color: #404040;
  }
  p {
    font: 300 21px/21px 'Manrope';
    line-height: 1.5;
    color: #606060;
    margin-bottom: 20px;
  }
  form {
    padding: 20px 10px 10px 0px;
    text-align: left;
    border-top: 1px solid #F1BFCE;
    border-top-style: dotted;
    label {
      display: inline-block;
      color: #808080;
      font: 300 16px/16px "Manrope";
      margin-right: 5px;
    }
    .form-control {
      display: inline-block;
      width: 70%;
      background-color: transparent;
      border: none;
      border-bottom: 3px solid #EA9FB5;
      box-shadow: none;
      outline: none;
      border-radius: 0;
      margin-top: 15px;
      margin-bottom: 40px;
      font: 300 20px/20px 'Manrope';
      padding-left: 5px;
      &:focus {
        outline: none;
        border-bottom: 3px solid #CE2052;
      }
    }
    .btn {
      display: block;
      height: 60px;
      width: 200px;
      border-radius: 4px;
      position: relative;
      background-color: #7E0B37;
      font: 500 24px/24px 'Baloo Bhaina 2';
      color: white;
      padding: 15px 16px;
      transition-duration: 0.03s;
      &:hover {
        background-color: #ffa41b !important;
        color: #900C3F !important;
        font-weight: 600;
        border-radius: 4px;
        transform: scale(1.06);
        transition-duration: 0.05s;
        text-shadow: 0px 7px 9px rgba(143,92,15,0.56);
      }
      &:focus {
        outline: none;
      }
    }
  }
  .disclaimer {
    margin-top: 20px;
    font-size: 13px;
    font-weight: 300;
    font-style: italic;
    color: #808080;
    a {
      color: #EA9FB5;
    }
  }
}

// HOME/WELCOME PAGE ---------------------------------------------//
.welcome-container {
  width: 90%;
  height: 90%;
  justify-content: space-between;
}

.welcome-graphic {
  background-image: image-url('iso-party-join');
  width: 55%;
}

.welcome-info {
  display: flex;
  height: 100%;
  width: 45%;
  flex-direction: column;
  justify-content: start;
  padding: 80px 0 20px 20px;
  h1 {
    font: 500 50px/50px 'Baloo Bhaina 2';
    margin-bottom: 20px;
  }
  p {
    font: 300 24px/32px 'Manrope';
    margin: 10px 0 30px 0;
  }
  .welcome-signup-btn {
    display: block;
    height: 60px;
    width: 200px;
    border-radius: 4px;
    position: relative;
    background-color: #7E0B37;
    font: 500 24px/24px 'Baloo Bhaina 2';
    text-align: center;
    color: white;
    padding: 18px 16px;
    transition-duration: 0.03s;
    margin-top: 20px;
    &:hover {
      text-decoration: none;
      background-color: #ffa41b !important;
      color: #900C3F !important;
      font-weight: 600;
      border-radius: 4px;
      transform: scale(1.06);
      transition-duration: 0.05s;
      text-shadow: 0px 7px 9px rgba(143,92,15,0.56);
    }
    &:focus {
      outline: none;
    }
  }
}

// EVENTS INDEX ----------------------------------------------//
.event-index-container {
  display: flex;
  justify-container: center;
  flex-flow: row nowrap;
  width: 100%;
  height: 100%;
  overflow: hidden;
}
/* ... */

